--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -4,7 +4,8 @@ name: Python app
 on: 
   push: 
     branches: ["main" ] 
-  pull request: branches: ["main" ] 
+  pull_request: 
+    branches: ["main" ] 
 jobs: 
   build: 
     runs-on: ubuntu-latest 
@@ -12,12 +13,12 @@ jobs:
       fail-fast: false 
       matrix: 
         python-version: ["3.8", "3.9", "3.10"] 
-    Steps: 
-    - uses: actions/checkout/@3 
-    - name: Set up Python ${{ matrix python-version }}
+    steps: 
+    - uses: actions/checkout@v3 
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3 
       with: 
-        python-version: $ {{ matrix.python-version}}
+        python-version: ${{ matrix.python-version}}
     - name: Install dependencies 
       run: | 
         make install 
